example/logs_example/intel_logs/example3_teste2.txt
example/example3_teste2.c:14:9: error: cannot initialize return object of type 'unsigned char' with an lvalue of type 'unsigned char *'
        return r;
               ^
1 error generated.
HLS FPGA Parse FAILED.
